# Car-AI-Assistant-v2

./: .gitignore  .spotify_cache  .token_cache.json  ARCHITECTURE.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_preferences_update.py
api/routes/: assistant.py  live.py  preferences.py  sessions.py
db/: database.py  models.py  service.py
email_folder/: email_README.md  email_agent.py  graph_client.py  models.py  tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AssistantControls.jsx  AssistantVisualiser.jsx  PreferencesPanel.jsx  SessionDetail.jsx  SessionList.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: LivePage.jsx
orchestration/: realtime_bridge.py
shared/: config.py  observability.py
spotify_folder/: spotify_README.md  spotify_agent.py  spotify_client.py
